<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>BSPSource Maven Parent</name>
    <artifactId>bspsrc-parent</artifactId>
    <groupId>info.ata4.bspsrc</groupId>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <description>Parent for bspsrc artifacts</description>
    <url>https://github.com/ata4/bspsource</url>

    <modules>
        <module>bspsrc-common</module>
        <module>bspsrc-lib</module>
        <module>bspsrc-decompiler</module>
        <module>bspsrc-app</module>
    </modules>

    <licenses>
        <license>
            <name>Unlicense</name>
            <url>https://unlicense.org</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <revision>1.4.7-SNAPSHOT</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>info.ata4.bspsrc</groupId>
                <artifactId>bspsrc-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>info.ata4.bspsrc</groupId>
                <artifactId>bspsrc-lib</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>info.ata4.bspsrc</groupId>
                <artifactId>bspsrc-decompiler</artifactId>
                <version>${project.version}</version>
            </dependency>
            
            <!-- Logging -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>2.24.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.24.1</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>1.27.1</version>
            </dependency>

            <!-- Cli library -->
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>4.7.7</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli-codegen</artifactId>
                <version>4.7.7</version>
            </dependency>

            <!-- 'xz for java' required for common-compress lzma -->
            <dependency>
                <groupId>org.tukaani</groupId>
                <artifactId>xz</artifactId>
                <version>1.10</version>
            </dependency>

            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf</artifactId>
                <version>3.6</version>
            </dependency>
            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf-extras</artifactId>
                <version>3.6</version>
            </dependency>
            <dependency>
                <groupId>com.github.weisj</groupId>
                <artifactId>jsvg</artifactId>
                <version>1.7.2</version>
            </dependency>

            <dependency>
                <groupId>com.miglayout</groupId>
                <artifactId>miglayout-swing</artifactId>
                <version>11.4.2</version>
            </dependency>

            <!-- Dependencies from jitpack.io -->
            <dependency>
                <groupId>com.github.rihi</groupId>
                <artifactId>ioutils</artifactId>
                <version>8e2a0c1a</version>
            </dependency>

            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.12.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>0.10.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.12.0</version>
                    <configuration>
                        <showDeprecation>true</showDeprecation>
                        <release>24</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.4.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
